<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/tv_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="@string/edit"
        android:textColor="@color/black_text_color" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_edit_name"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/share"
        android:textColor="@color/black_text_color" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_share"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/info"
        android:textColor="@color/black_text_color" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/delete"
        android:textColor="@color/black_text_color" />
</RelativeLayout>