<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_gradient"
    tools:context="com.audioeffect.voicechanger.ui.activities.SplashActivity">

    <TextView
        android:id="@+id/txtWelCome"
        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
        android:layout_marginStart="37dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/splash_Title1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="26sp"
        android:layout_width="172dp"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/txtWelCome"
        android:layout_marginStart="37dp"
        android:textColor="@color/colorWhite"
        android:text="@string/splash_Title2"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="26sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgLogo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="anim/icon_splash.json"
        app:lottie_loop="true" />


    <TextView
        android:id="@+id/btnStart"
        android:layout_marginBottom="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:text="@string/splash_Start"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorWhite"
        android:background="@drawable/gradient_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_title_policy"
            android:textColor="@color/colorWhite"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/btnPriPo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/splash_policy"
            android:textColor="@color/colorWhite"
            android:textSize="14dp"
            tools:ignore="SpUsage" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>